--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ plugins {
 
 group = 'uz.spring'
 version = '0.0.1'
-description = 'Delivery service'
+description = 'Notification service'
 
 java {
 	toolchain {
